feat: One of posts and moving between making post and showing rank

--- a/app/src/main/res/layout/fragment_show_rink.xml
+++ b/app/src/main/res/layout/fragment_show_rink.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Rank.ShowRank">
+    tools:context=".Rank.RankingFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
