--- a/app/src/main/res/layout/fragment_make_post.xml
+++ b/app/src/main/res/layout/fragment_make_post.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@null"
-    tools:context=".Post.MakePost">
+    tools:context=".Post.MakingPostFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/make_post_frame"
