--- a/app/src/main/res/layout/fragment_make_post.xml
+++ b/app/src/main/res/layout/fragment_make_post.xml
@@ -28,18 +28,12 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/btn_call_gallery"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="사진" />
 
-                <Button
-                    android:id="@+id/button5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="위치" />
             </LinearLayout>
 
             <LinearLayout
@@ -57,6 +51,7 @@
             android:layout_marginTop="90dp"
             android:layout_marginEnd="40dp"
             android:layout_marginBottom="50dp"
+            android:background="@drawable/long_edit_test"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -88,10 +83,9 @@
 
             <EditText
                 android:id="@+id/eText_post"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/long_edit_test"
                 android:gravity="top"
                 android:hint="포스트를 작성해 주세요!"
                 android:inputType="textMultiLine|textNoSuggestions"
@@ -103,6 +97,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/eText_info_location"
                 app:layout_constraintVertical_bias="0.0" />
+
+            <ImageView
+                android:id="@+id/test_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:src="@tools:sample/avatars" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageView
