--- a/app/src/main/res/layout/activity_select_photo.xml
+++ b/app/src/main/res/layout/activity_select_photo.xml
@@ -52,6 +52,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/photo_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
